Shoping cart react app

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,7 @@ body {
 .m-0 {
   margin: 0;
 }
+
 .pr-10 {
   padding-right: 10px;
 }
@@ -151,6 +152,12 @@ body {
 .endPoint {
   top: 26px;
 }
+.footer {
+  justify-content: center;
+  background: #5378eb;
+  color: #fff;
+  width: 100%;
+  }
 input {
   &.filter {
     top: 16px;
@@ -243,6 +250,7 @@ input {
     max-width: 1140px;
     margin: 0 auto;
     width: 100%;
+
   }
   &__row {
     display: flex;
@@ -282,6 +290,7 @@ input {
   display: flex;
   flex-direction: column;
   padding-right: 20px;
+  justify-content: space-between;
 
   p {
     margin-bottom: 10px;
